--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.0.1",
     "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4"
+    "jest-environment-jsdom": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
