--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "4.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.2",
@@ -31,6 +31,8 @@
     "eslint-plugin-testing-library": "^6.0.1",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
-    "ts-jest": "^29.1.1"
+    "msw": "^1.2.5",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
