--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-testing-library": "^6.0.1",
     "jest": "^29.6.4",
